# arkpz-pzpi-22-6-biletskyi-danylo

./: .gitignore  LICENSE  README.md
Pract1/: arkpz-pzpi-22-6-biletskyi-danylo-pract1.txt
Pract1/arkpz-pzpi-22-6-biletskyi-danylo-pract1/: code-example-pract1.txt
Pract2/: arkpz-pzpi-22-6-biletskyi-danylo-pract2.txt
Pract2/arkpz-pzpi-22-6-biletskyi-danylo-pract2/: code.txt
Task1/: arkpz-pzpi-22-6-Biletskiy-Danylo-task1.txt  arkpz-pzpi-22-6-biletskyi-danylo-task1.txt
Task2/: arkpz-pzpi-22-6-biletskyi-danylo-task2.txt
Task2/arkpz-pzpi-22-6-Biletskyi-Danylo-task2/MediStoS/: MediStoS.csproj  Program.cs  WeatherForecast.cs
Task2/arkpz-pzpi-22-6-Biletskyi-Danylo-task2/MediStoS/Controllers/: AuthController.cs  BatchController.cs  MedicineController.cs  SensorController.cs  StorageViolationController.cs  UserController.cs  WarehouseController.cs
Task2/arkpz-pzpi-22-6-Biletskyi-Danylo-task2/MediStoS/DataTransferObjects/: BatchCreateModel.cs
Task2/arkpz-pzpi-22-6-Biletskyi-Danylo-task2/MediStoS/Enums/: Roles.cs
Task3/: arkpz-pzpi-22-6-biletskyi-danylo-task3.txt
Task3/arkpz-pzpi-22-6-biletskyi-danylo-task3/MediStoS/: MediStoS.csproj  Program.cs
Task4/: arkpz-pzpi-22-6-biletskyi-danylo-task4.txt
Task4/arkpz-pzpi-22-6-biletskyi-danylo-task4/MediStoS/: MediStoS.http
Task5/: arkpz-pzpi-22-6-biletskyi-danylo-task5.txt
Task5/arkpz-pzpi-22-6-biletskyi-danylo-task5/IoT/IotSensors/: CMakeLists.txt  Configurate.cpp  IoTClient.cpp  IoTClient.h
Task5/arkpz-pzpi-22-6-biletskyi-danylo-task5/MediStoS/: MediStoS.csproj  MediStoS.sln  Program.cs
(+71 files in other folders)
